[package]
name = "minipkgsite"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
redis = { version = "0.25", features = ["tokio-comp"] }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread", "fs", "process"] }
eyre = "0.6"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2.5.0"
abbs-meta-apml = { git = "https://github.com/AOSC-Dev/abbs-meta-rs", package = "abbs-meta-apml", rev = "4a592937b44e8bb93103edd34eff384169a3248a" }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5.2", features = ["cors"] }
dotenvy = "0.15.7"
